Singela homenagem q não podia faltar

--- a/Dissertacao_Marcelo_Goncalves/epigrafe.tex
+++ b/Dissertacao_Marcelo_Goncalves/epigrafe.tex
@@ -6,5 +6,11 @@
     de algum modo, começar.'' \\
     Amyr Klink}
   \end{flushright}
+  \begin{flushright}
+    \emph{``O que importa é o conhecimento'' \\
+    Sabedoria baiana}
+  \end{flushright}
 \end{epigrafe}
+
+
 % ---
