Mais um small fix

--- a/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
@@ -217,11 +217,16 @@ Considerando $m$ Níveis de Carga de Trabalho, as fórmulas para o cálculo das 
 
 
 O valores médios de \emph{Precision}, \emph{Recall} e \emph{F-Measure}
-calculados sobre os resultados dos experimentos realizados mostra que o Processo de Avaliação e Capacidade com base em Inferência de Desempenho é capaz de obter índices de acertos muito próximos de 100\%, como 
-pode ser observado nas Tabelas~\ref{table:acuracia_capacidade}~e~\ref{table:acuracia_preco}. Cada célula nessas tabelas apresenta a média obtida pela Heurística nas predições para cada um dos 10 Níveis de Carga de Trabalho avaliados sob cada SLA em questão. Em ambas, as linhas exibem 
-as Heurísticas usadas na execução do Processo e as colunas, agrupadas segundo
-os SLAs aplicados nos testes, de 10 segundos até 50 segundos, os resultados 
-de acurácia calculados para \emph{Precision} (P), \emph{Recall} (R) e \emph{F-Measure} (F).
+calculados sobre os resultados dos experimentos realizados mostra que o Processo 
+de Avaliação de Capacidade com base em Inferência de Desempenho é capaz de obter 
+índices de acertos muito próximos de 100\%, como pode ser observado nas 
+Tabelas~\ref{table:acuracia_capacidade}~e~\ref{table:acuracia_preco}. Cada célula 
+nessas tabelas apresenta a média obtida pela Heurística nas predições para cada 
+um dos 10 Níveis de Carga de Trabalho avaliados sob cada SLA em questão. Em ambas, 
+as linhas exibem as Heurísticas usadas na execução do Processo e as colunas, 
+agrupadas segundo os SLAs aplicados nos testes, de 10 segundos até 50 segundos, 
+os resultados de acurácia calculados para \emph{Precision} (P), \emph{Recall} (R) 
+e \emph{F-Measure} (F).
 
 A Tabela~\ref{table:acuracia_capacidade} apresenta os dados de acurácia das 
 predições realizadas usando-se o Espaço de Implantação estruturado pelas relações
