Revisão conforme Marcelo Goncalves

--- a/Dissertacao_Marcelo_Goncalves/capitulos/fundamentacao-relacionados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/fundamentacao-relacionados.tex
@@ -238,15 +238,15 @@ mais barato entre todos, inclusive mais barato que o centro de dados no Brasil.
 
 \subsection{Planejamento de Capacidade}
 
-A questão do planejamento de capacidade de recursos na nuvem pode ser vista a partir de dois ângulos distintos: do ponto de vista do provedor do serviço e do ponto de vista do usuário do serviço \cite{Menasce2009}. Do ponto de vista do provedor do serviço, planejar a capacidade dos recursos significa monitorar a utilização e, sempre que necessário, adicionar novos  recursos computacionais à infraestrutura física onde são implantados os serviços disponibilizados aos usuários da nuvem. Nesse aspecto, o planejamento de capacidade precisa ser realizado pelo provedor independentemente do modelo de implantação ou do tipo de serviço oferecido aos usuários.
+O planejamento de capacidade de recursos na nuvem pode ser visto a partir de dois ângulos distintos: do ponto de vista do provedor do serviço e do ponto de vista do usuário do serviço \cite{Menasce2009}. Do ponto de vista do provedor do serviço, planejar a capacidade dos recursos significa monitorar a utilização e, sempre que necessário, adicionar novos  recursos computacionais à infraestrutura física onde são implantados os serviços disponibilizados aos usuários da nuvem. Nesse aspecto, o planejamento de capacidade precisa ser realizado pelo provedor independentemente do modelo de implantação ou do tipo de serviço oferecido aos usuários.
 
 Já do ponto de vista do usuário do serviço, o planejamento de capacidade envolve o correto dimensionamento dos recursos virtuais a serem alocados às diferentes aplicações que serão executadas na nuvem. Nesse caso, o planejamento de capacidade é necessário apenas em nuvens da modalidade IaaS, uma vez que em nuvens das modalidades PaaS e SaaS a alocação dos recursos às aplicações é feita automaticamente, como parte dos benefícios oferecidos pelo provedor do serviço, ficando totalmente transparente ao usuário. 
 
-Em qualquer dos casos, um planejamento inadequado dos recurso pode levar a situações distintas mas igualmente indesejadas. No caso do provedor do serviço, um mal planejamento pode resultar tanto em uma infraestrutura subutilizada, na qual a quantidade de recursos físicos disponíveis é muito superior à demanda, quanto em uma infraestrutura saturada, com qual o provedor não consegue garantir os requisitos mínimos de qualidade prometidos aos usuários em seus acordos de nível de serviço. Ambas as situações podem acarretar em prejuízos financeiros, seja pelo desperdício de recursos, seja pela insatisfação e eventual saída dos usuários.
+Em qualquer dos casos, um planejamento inadequado dos recursos pode levar a situações distintas mas igualmente indesejadas. No caso do provedor do serviço, um mal planejamento pode resultar tanto em uma infraestrutura subutilizada, na qual a quantidade de recursos físicos disponíveis é muito superior à demanda, quanto em uma infraestrutura saturada, com a qual o provedor não consegue garantir os requisitos mínimos de qualidade prometidos aos usuários em seus acordos de nível de serviço. Ambas as situações podem acarretar em prejuízos financeiros, seja pelo desperdício de recursos, seja pela insatisfação e eventual saída dos usuários.
 
-A questão do planejamento de recursos é ainda mais sutil no caso do usuário do serviço de nuvem, que é o foco deste trabalho. Isso porque a contratação de recursos virtuais além do estritamente necessário costuma passar despercebida à maioria dos usuários de nuvens IaS, que muitas vezes focam apenas no monitoramento do desempenho de suas aplicações, e não no nível de utilização do recursos que lhes foram alocados. Esse problema existe mesmo diante da utilização de serviços IaaS que oferecem escalabilidade automática de aplicações, como é o caso dos serviços Amazon CloudWatch \cite{amazon_watch} e RightScale \cite{rightscale}. A razão é que esses tipos de serviço são tipicamente restritos à escalabilidade horizontal da aplicação, na qual alguns dos componentes da aplicação são executados paralelamente em um conjunto de duas ou mais máquinas virtuais do mesmo tipo. Dependendo do nível de utilização das máquinas virtuais em uso, mais máquinas virtuais podem ser adicionadas ao grupo ou algumas das máquinas virtuais em uso podem ser desligadas. De qualquer maneira, com esse tipo de serviço a variação da capacidade de recursos alocados à aplicação fica limitada à variação da quantidade de máquinas virtuais presentes em grupos de máquinas homogêneos, cujos tipos também precisam ser cuidadosamente determinados pelo usuário como parte do processo de planejamento de capacidade. 
+A questão do planejamento de recursos é ainda mais sutil no caso do usuário do serviço de nuvem, que é o foco deste trabalho. Isso porque a contratação de recursos virtuais além do estritamente necessário costuma passar despercebida à maioria dos usuários de nuvens IaaS, que muitas vezes focam apenas no monitoramento do desempenho de suas aplicações, e não no nível de utilização do recursos que lhes foram alocados. Esse problema existe mesmo diante da utilização de serviços IaaS que oferecem escalabilidade automática de aplicações, como é o caso dos serviços Amazon CloudWatch \cite{amazon_watch} e RightScale \cite{rightscale}. A razão é que esses tipos de serviço são tipicamente restritos à escalabilidade horizontal da aplicação, na qual alguns dos componentes da aplicação são executados paralelamente em um conjunto de duas ou mais máquinas virtuais do mesmo tipo. Dependendo do nível de utilização das máquinas virtuais em uso, mais máquinas virtuais podem ser adicionadas ao grupo ou algumas das máquinas virtuais em uso podem ser desligadas. De qualquer maneira, com esse tipo de serviço a variação da capacidade de recursos alocados à aplicação fica limitada à variação da quantidade de máquinas virtuais presentes em grupos de máquinas homogêneos, cujos tipos também precisam ser cuidadosamente determinados pelo usuário como parte do processo de planejamento de capacidade. 
 
-A próxima seção apresenta e analisa criticamente alguns dos principais trabalhos propostos para apoiar usuários de serviços de nuvem IaaS a melhor planejar a capacidade dos recursos a serem alocados a suas aplicações.
+A próxima seção apresenta e analisa criticamente alguns dos principais trabalhos propostos para apoiar usuários de serviços de nuvem IaaS a melhor planejar a capacidade dos recursos a serem alocados às suas aplicações.
 
 \section{Abordagens para Apoiar o Planejamento de Capacidade em Nuvens IaaS}
 
@@ -262,7 +262,7 @@ desempenho diretamente na aplicação que será migrada para a nuvem. Dessa form
 eles tentam prever a configuração ideal de implantação da aplicação alvo.
 
 A maioria das soluções que adotam a abordagem preditiva realiza as
-suas predições após a caracterização da performance dos recurso da nuvem, o que
+suas predições após a caracterização da performance dos recursos da nuvem, o que
 é realizado através da execução de \textit{benchmarks}. A exceção é a solução proposta em~\cite{li2011cloudprophet}, que coleta dados sobre como a
 aplicação alvo faz uso dos recursos computacionais em um ambiente controlado e
 então repete essa utilização em uma nuvem candidata. Dessa forma, não é necessária a caracterização prévia da performance dos recursos da nuvem.
@@ -368,7 +368,7 @@ obtidos a partir da execução dos {\em benchmarks} em cada provedor apenas refl
 \subsubsection{CloudAdvisor}
 O trabalho apresentado em~\cite{jung2013cloudadvisor} ``introduz uma nova plataforma de recomendação de nuvem, chamada {\em CloudAdvisor}''. Essa plataforma destina-se a auxiliar o seu usuário na tarefa de capturar as implicações monetárias e financeiras das configurações de implantação das suas aplicações. Para recomendar a configuração, a platforma recebe como entrada parâmetros de configuração de alto nível como, orçamento, expectativa de performance e economia de energia, os quais estão limitados a uma escala discreta que vai de 0 até 10, onde 0 significa baixa influência e 10 significa alta influência. Uma vez informados os parâmetros de configuração, o {\em CloudAdvisor} irá caracterizar a performance da aplicação alvo em termos de uso dos recursos computacionais e em seguida executará o {\em benchmark} {\em CloudMeter},~\cite{jung2013cloudadvisor}, nas nuvens candidatas, a fim de caracterizar a performance dos recursos dessas nuvens.
 
-Para ilustrar o uso do {\em CloudAdvisor}, os autores implantaram a solução em servidores locais e em três provedores de nuvem pública, foram eles: Windows Azure~\cite{azure}, Rackspace~\cite{rackspace}, and Amazon EC2~\cite{ec2}. Como resultado, foi observado que a taxa de erro da configuração para uma determinada carga foi de 10~\%. No entanto, quando o usuário do ambiente escolhe parâmetros de configuração extremos (por exemplo, configurar o máximo de orçamento, de economia de energia e de nível de performance), essa taxa de erro elevou para 18~\%.
+Para ilustrar o uso do {\em CloudAdvisor}, os autores implantaram a solução em servidores locais e em três provedores de nuvem pública. Foram eles: Windows Azure~\cite{azure}, Rackspace~\cite{rackspace}, e Amazon EC2~\cite{ec2}. Como resultado, foi observado que a taxa de erro da configuração para uma determinada carga foi de 10~\%. No entanto, quando o usuário do ambiente escolhe parâmetros de configuração extremos (por exemplo, configurar o máximo de orçamento, de economia de energia e de nível de performance), essa taxa de erro elevou para 18~\%.
 
 Os autores concluem que o usuário da solução pode explorar diversas opções de configuração da sua aplicação na nuvem utilizando uma interface amigável e sem a necessidade de informar detalhes específicos de configuração. Além disso, mostraram que é possível utilizar uma técnica de caracterização de performance, para uma dada carga, baseada na execução de {\em benchmarks} em nuvens candidatas.
 
@@ -414,7 +414,7 @@ compatibilidade no novo ambiente.
 
 Os trabalhos que adotam a abordagem empírica têm em comum o fato de utilizarem como aplicação alvo a própria aplicação que se deseja implantar na nuvem. Portanto, é preciso inicialmente realizar uma implantação na nuvem para que seja dado início ao processo de análise de desempenho. Por isso, cada trabalho oferece mecanismos para que o usuário possa definir como a aplicação deve ser implantada e configurada. Além da definição da aplicação e dos recursos da nuvem que serão utilizados, esses trabalhos também permitem que sejam definidas a demanda que será imposta a cada aplicação e o acordo de nível de serviço. Dessa forma, é possível definir, por exemplo, o número de usuários simultâneos e o tempo de resposta esperado para uma operação.
 
-Uma vez que que os trabalhos que seguem a abordagem empírica possibilitam ao usuário muita liberdade na definição da aplicação, demanda, recurso da nuvem e SLA, essas soluções têm o mais alto grau de flexibilidade. Além disso, como faz-se uso da própria aplicação alvo para a avaliação de desempenho, a acurácia dos resultados apresentados é bastante elevada. 
+Uma vez que os trabalhos que seguem a abordagem empírica possibilitam ao usuário muita liberdade na definição da aplicação, demanda, recurso da nuvem e SLA, essas soluções têm o mais alto grau de flexibilidade. Além disso, como faz-se uso da própria aplicação alvo para a avaliação de desempenho, a acurácia dos resultados apresentados é bastante elevada. 
 
 A seguir, apresentamos quatro trabalhos que se destacam na avaliação de desempenho de aplicações na nuvem usando a abordagem empírica. São eles: Expertus~\cite{jayasinghe2012}, CloudBench~\cite{silva2013cloudbench}, Cloud Crawler~\cite{cunhacloud,cunha2013b} e Cloud WorkBench~\cite{scheuner2014cloud}.
 
@@ -547,7 +547,7 @@ de abordagem empírica possuem baixa eficiência. Por outro lado, como irão
 executar de fato a aplicação e submetê-la à demanda especificada, essas soluções
 possuem alta acurácia. Já no que diz respeito à complexidade, o desempenho é
 considerado moderado. Uma vez que cada trabalho faz uso de uma estratégia
-de uso particular, e que as experiências anteriores do usuário irão ser
+de uso particular, e que as experiências anteriores do usuário serão
 determinantes na percepção da complexidade, esse usuário precisa se adaptar aos mecanismos oferecidos por cada solução, e eventualmente, configurar imagens contendo os
 componentes da aplicação que será avaliada.
 
