--- a/Dissertacao_Marcelo_Goncalves/capitulos/processo.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/processo.tex
@@ -607,8 +607,9 @@ a Aplicação sob Teste, em ordem crescente de preço.
 
 Por ``capazes de executar'', entenda-se como as Configurações para as quais o valor
 obtido para a Métrica de Desempenho durante a execução da Aplicação sob determinada
-Carga de Trabalho é menor ou igual ao valor definido para o SLA
-como parte dos dados de entrada do Processo.
+Carga de Trabalho é menor ou igual, para Métricas minimizáveis, maior ou igual, 
+para Métricas maximizáveis, ao valor definido para o SLA como parte dos dados de 
+entrada do Processo.
 
 Embora essa seja a resposta final do processo, a contribuição real deste trabalho está
 na maneira como chegamos a essa resposta, com redução de custo e tempo, e na precisão 
