--- a/Dissertacao_Marcelo_Goncalves/resumo.tex
+++ b/Dissertacao_Marcelo_Goncalves/resumo.tex
@@ -5,7 +5,7 @@ Um dos principais desafios enfrentados pelos usuários de nuvens que oferecem
 infraestrutura-como-serviço (IaaS) é planejar adequadamente a capacidade dos 
 recursos da nuvem necessários às suas aplicações. Este trabalho propõe uma nova 
 abordagem para apoiar o planejamento da capacidade de aplicações em nuvens IaaS. 
-A nova a abordagem tem como premissa a definição de uma relação de capacidade 
+A nova abordagem tem como premissa a definição de uma relação de capacidade 
 entre as diferentes configurações de recursos oferecidas por um provedor de nuvem, 
 com a qual é possível prever (ou ``inferir''), com alto grau de precisão, o 
 desempenho esperado de uma aplicação para determinadas configurações de recursos. 
