Revisão conforme Prof. Danielo Goncalves Gomes

--- a/Dissertacao_Marcelo_Goncalves/capitulos/conclusao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/conclusao.tex
@@ -28,7 +28,7 @@ do desempenho real de uma configuração ao executar de fato a aplicação no
 ambiente de nuvem. A inferência é realizada pela interpretação do mapeamento das 
 relações de capacidade existentes entre as diversas configurações que o provedor 
 disponibiliza. A alta acurácia das inferências, acima de 99\% em média, conforme 
-verificada pelos experimentos demonstrados no Capítulo~\ref{chap:resultados}, denota 
+verificada pelos experimentos mostrados no Capítulo~\ref{chap:resultados}, denota 
 a confiabilidade das respostas dadas pela utilização do Processo de Inferência 
 no apoio às atividades de planejamento de capacidade para migração de aplicações 
 para o ambiente de nuvem. 
