--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -345,6 +345,12 @@
   year={2012},
   publisher={Springer}
 }
+@book{jain1981,
+  author={Jain, Raj},
+  title={The art of computer systems performance analysis},
+  publisher={Wiley Press},
+  year={1981}
+}
 @article{perez2011knowledge,
   title={Knowledge Discovery Metamodel-ISO/IEC 19506: A standard to modernize legacy systems},
   author={P{\'e}rez-Castillo, Ricardo and De Guzman, Ignacio Garcia-Rodriguez and Piattini, Mario},
