--- a/Dissertacao_Marcelo_Goncalves/resumo.tex
+++ b/Dissertacao_Marcelo_Goncalves/resumo.tex
@@ -22,17 +22,17 @@ implicando em menores custo e tempo para o processo de planejamento.
 % resumo em inglês
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-One of the main challenges faced by users of infrastructure-as-a-service (IaaS) 
+One of the main challenges faced by users of Infrastructure-as-a-Service (IaaS) 
 clouds is to correctly plan the resource capacity required for their applications'
 needs. This work proposes a new approach to support application capacity planning 
 in IaaS clouds. This new approach is based on the definition of a capacity relation 
-between different resource configurations offered by a cloud provider which enables 
-to predict (or ``infer''), with a high level of accuracy, the expected performance 
+between different resource configurations offered by a cloud provider which allows 
+the prediction (or ``inference''), with a high level of accuracy, of the expected performance 
 of an application for certain resource configurations. The prediction is made based
 upon the observed performance for other resource configurations within the same 
 provider. The approach significantly reduces the total number of configurations 
 effectively tested in the cloud (preliminary results show reductions of over 80\% 
-on the number of total tested configurations) resulting in lower costs and time 
+on the number of total tested configurations) resulting in lower time and financial costs  
 for the capacity planning process.
 
    \vspace{\onelineskip}
